[gd_scene format=3 uid="uid://dakgkoaihfypk"]

[ext_resource type="Script" uid="uid://dy62rqpa2727u" path="res://Test/镜像变换和伪3D翻转/determinant_visualizer.gd" id="1_0kag7"]

[node name="Control" type="Control" unique_id=1935789132]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0kag7")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=592733719]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2


[node name="ScaleXHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=100001000]
layout_mode = 2

[node name="ScaleXLabel" type="Label" parent="VBoxContainer/ScaleXHBox" unique_id=100001001]
layout_mode = 2
text = "Scale X:"

[node name="ScaleXSpin" type="SpinBox" parent="VBoxContainer/ScaleXHBox" unique_id=100001002]
layout_mode = 2
min_value = 0.01
max_value = 10.0
step = 0.01
value = 1.0

[node name="ScaleYHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=100001100]
layout_mode = 2

[node name="ScaleYLabel" type="Label" parent="VBoxContainer/ScaleYHBox" unique_id=100001101]
layout_mode = 2
text = "Scale Y:"

[node name="ScaleYSpin" type="SpinBox" parent="VBoxContainer/ScaleYHBox" unique_id=100001102]
layout_mode = 2
min_value = 0.01
max_value = 10.0
step = 0.01
value = 1.0

[node name="RotateHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=100001200]
layout_mode = 2

[node name="AngleLabel" type="Label" parent="VBoxContainer/RotateHBox" unique_id=100001201]
layout_mode = 2
text = "Angle:"

[node name="AngleSpin" type="SpinBox" parent="VBoxContainer/RotateHBox" unique_id=100001202]
layout_mode = 2
max_value = 360.0

[node name="AxisOption" type="OptionButton" parent="VBoxContainer/RotateHBox" unique_id=100001203]
layout_mode = 2

[node name="SkewXHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=100001300]
layout_mode = 2

[node name="SkewXLabel" type="Label" parent="VBoxContainer/SkewXHBox" unique_id=100001301]
layout_mode = 2
text = "Skew X:"

[node name="SkewXSpin" type="SpinBox" parent="VBoxContainer/SkewXHBox" unique_id=100001302]
layout_mode = 2
min_value = -5.0
max_value = 5.0
step = 0.01
value = 0.0

[node name="SkewYHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=100001310]
layout_mode = 2

[node name="SkewYLabel" type="Label" parent="VBoxContainer/SkewYHBox" unique_id=100001311]
layout_mode = 2
text = "Skew Y:"

[node name="SkewYSpin" type="SpinBox" parent="VBoxContainer/SkewYHBox" unique_id=100001312]
layout_mode = 2
min_value = -5.0
max_value = 5.0
step = 0.01
value = 0.0

[node name="PivotHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=100001400]
layout_mode = 2

[node name="PivotXLabel" type="Label" parent="VBoxContainer/PivotHBox" unique_id=100001401]
layout_mode = 2
text = "Pivot X:"

[node name="PivotXSpin" type="SpinBox" parent="VBoxContainer/PivotHBox" unique_id=100001402]
layout_mode = 2
min_value = -1000.0
max_value = 1000.0

[node name="PivotYLabel" type="Label" parent="VBoxContainer/PivotHBox" unique_id=100001403]
layout_mode = 2
text = "Pivot Y:"

[node name="PivotYSpin" type="SpinBox" parent="VBoxContainer/PivotHBox" unique_id=100001404]
layout_mode = 2
min_value = -1000.0
max_value = 1000.0

[node name="OrderHBox" type="HBoxContainer" parent="VBoxContainer" unique_id=100001500]
layout_mode = 2

[node name="OrderLabel" type="Label" parent="VBoxContainer/OrderHBox" unique_id=100001501]
layout_mode = 2
text = "Order:"

[node name="OrderOption" type="OptionButton" parent="VBoxContainer/OrderHBox" unique_id=100001502]
layout_mode = 2

[node name="MatrixText" type="RichTextLabel" parent="VBoxContainer" unique_id=1068598462]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1772131650]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.03

[node name="ValueLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=1660135163]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HandednessLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=410107317]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
